updated my projects at 'work'

--- a/index.html
+++ b/index.html
@@ -289,16 +289,21 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
+            <a href="img/work-advices.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
+                <img src="img/work-advices.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Landing Page - Coming Soon</h2>
+                    <h2 class="w-title">Advices Generator</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <p>
+                    <a href="https://or-arbel.github.io/advice-app-react/" target="_blank"><span class="title-s">View Project </span></a>| 
+
+                    <a href="https://github.com/Or-Arbel/advice-app-react" target="_blank"><span class="title-s"> View Code</span></a>
+                    </p>
+                      <span class="w-ctegory">Web Development</span> / <span class="w-date">27 Feb. 2021</span>
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
@@ -313,16 +318,21 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+            <a href="img/work-recipes.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
+                <img src="img/work-recipes.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Project 3 - Coming Soon</h2>
+                    <h2 class="w-title">Recipes Finder</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <p>
+                    <a href="https://or-arbel.github.io/recipes-finder/" target="_blank"><span class="title-s">View Project </span></a>| 
+
+                    <a href="https://github.com/Or-Arbel/recipes-finder" target="_blank"><span class="title-s"> View Code</span></a>
+                    </p>
+                      <span class="w-ctegory">Web Development</span> / <span class="w-date">23 Jan. 2021</span>
                     </div>
                   </div>
                   <!-- <div class="col-sm-4">
